--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-instantsearch-core": "^7.12.2",
     "react-native": "0.74.3",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
