--- a/app.json
+++ b/app.json
@@ -14,6 +14,8 @@
     "ios": {
       "supportsTablet": true
     },
+    "scheme": "MaestroSearch",
+
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -22,6 +24,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-router"]
   }
 }
